RESOLVED FIXED229183
RTCPeerConnection::m_transceiverSet does not need to be allocated separately from its RTCPeerConnection
https://bugs.webkit.org/show_bug.cgi?id=229183
Summary RTCPeerConnection::m_transceiverSet does not need to be allocated separately ...
youenn fablet
Reported 2021-08-17 04:41:07 PDT
RTCPeerConnection::m_transceiverSet does not need to be allocated separately from its RTCPeerConnection
Attachments
Patch (5.68 KB, patch)
2021-08-17 04:42 PDT, youenn fablet
no flags
Patch for landing (6.14 KB, patch)
2021-08-19 01:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-08-17 04:42:36 PDT
youenn fablet
Comment 2 2021-08-19 01:01:00 PDT
Created attachment 435852 [details] Patch for landing
EWS
Comment 3 2021-08-19 02:17:24 PDT
Committed r281231 (240668@main): <https://commits.webkit.org/240668@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435852 [details].
Radar WebKit Bug Importer
Comment 4 2021-08-19 02:18:17 PDT
Note You need to log in before you can comment on or make changes to this bug.