RTCPeerConnection::m_transceiverSet does not need to be allocated separately from its RTCPeerConnection https://bugs.webkit.org/show_bug.cgi?id=229183

Reviewed by Eric Carlson.

No change of behavior.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::addTrack):
(WebCore::RTCPeerConnection::removeTrack):
(WebCore::RTCPeerConnection::getStats):
(WebCore::RTCPeerConnection::doClose):
(WebCore::RTCPeerConnection::addInternalTransceiver):
(WebCore::RTCPeerConnection::getSenders const):
(WebCore::RTCPeerConnection::getReceivers const):
(WebCore::RTCPeerConnection::getTransceivers const):
* Modules/mediastream/RTCPeerConnection.h:


Canonical link: https://commits.webkit.org/240668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281231 268f45cc-cd09-0410-ab3c-d52691b4dbfc